--- a/styles/inner.layout.module.scss
+++ b/styles/inner.layout.module.scss
@@ -1,3 +1,9 @@
 .innerLayout{
     padding: 110px 0 10px 0;
 }
+
+@media screen and (max-width: 767px) {
+  .innerLayout{
+      padding: 110px 0 110px 0;
+  }
+}
