--- a/styles/paiement.module.scss
+++ b/styles/paiement.module.scss
@@ -26,6 +26,8 @@
   padding: 10px 25px;
   font-size: 16px;
   cursor: pointer;
+  font-family: 'Poppins', sans-serif;
+  font-weight: bold;
 }
 
 .validationButton button:hover {
